<resources>
    <string name="app_name">Fabyan</string>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department…</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="Nfc_not_ready">NFC not ready</string>

    <string name="Precious">Precious Mago, Media Manager" "\n" "pmago0524@gmail.com"</string>
    <string name="zim">Krista Zimmer, President " "\n" " zimmerjz@outlook.com</string>
    <string name="kast">Anantya Kasturi, Historian " "\n" " Kastu984@wths.net</string>
    <string name="wong">Olivia Wong, Reporter " "\n" " Wong902@wths.net</string>
    <string name="pina">Reena Pinapala, ALM Secretary " "\n" " pinap526@wths.net</string>
    <string name="liu">Grace Liu, OPL Secretary " "\n" " liu215@wths.net</string>
    <string name="brap">Brian Rapanan, ALM Treasurer " "\n" " brapanan23@gmail.com</string>
    <string name="patel">Kevin Patel, OPL Treasurer " "\n" " patel215@wths.net</string>
    <string name="dash"><![CDATA[Sohom Dash, Northern Area & State Parliamentarian " "\n" " sohomdash01@gmail.com]]></string>
    <string name="kash">Kashyap Ramachandrula, Chapter Parliamentarian " "\n" " ramac919@wths.net</string>
    <string name="war">Ifra Waris, ALM8 Bookstore Manager " "\n" " ifrawaris@gmail.com</string>
    <string name="pull">Bharat Pullela,OPL Bookstore Manager " "\n" " Pulle656@wths.net</string>
    <string name="register">Q: How do I register to be a member of Warren Township High School’s FBLA chapter?  " "\n" " A: Contact your chapter’s sponsors, who can send you an FBLA membership form. After completing this form, you must pay a fee of $20 in order to be officially considered a member and to participate in competitive events.</string>
    <string name="stand">Q: What does FBLA stand for?</string>
    <string name="standA">A: Future Business Leaders of America</string>
    <string name="registerQ">Q: How do I register to be a member of Warren Township High School’s FBLA chapter?</string>
    <string name="a_contact_your_chapter_s_sponsors_who_can_send_you_an_fbla_membership_form_after_completing_this_form_you_must_pay_a_fee_of_20_in_order_to_be_officially_considered_a_member_and_to_participate_in_competitive_events">A: Contact your chapter’s sponsors, who can send you an FBLA membership form. After completing this form, you must pay a fee of $20 in order to be officially considered a member and to participate in competitive events.</string>
    <string name="signQ">Q: How do I sign up for a competitive event?</string>
    <string name="signA">A: Make sure your dues have been paid before the national deadline posted on the national FBLA website, and that you fill out the competitive event sign-up from the monthly general meeting.</string>
    <string name="purposeQ">Q: What is the purpose of FBLA?</string>
    <string name="purposeA">A: FBLA-PBL inspires and prepares students to become community-minded business leaders in a global society through relevant career preparation and leadership experiences. (From National FBLA Website)</string>
    <string name="involvedQ">Q: How do I get more involved in FBLA?</string>
    <string name="involvedA">A: Participating in volunteering, doing school-wide fundraising, competing in competitive events, and going to leadership conferences are all great ways to get more involved in the FBLA community.</string>
    <string name="debugsend">Send Message to Developers</string>
    <string name="send_message_to_advisors">Send Message to Advisors</string>

</resources>
