<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/darkBlue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBlue"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/white"
            android:src="@mipmap/top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:text="FBLA Frequently Asked Questions"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:typeface="sans" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/roundedbuttons"
            android:padding="15dp"
            android:text="@string/stand"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:typeface="sans" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:padding="15dp"
            android:text="@string/standA"
            android:textAlignment="center"
            android:textColor="@color/darkWhite"
            android:textSize="22sp"
            android:typeface="sans" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/roundedbuttons"
            android:padding="15dp"
            android:text="@string/registerQ"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:typeface="sans" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:padding="15dp"
            android:text="@string/a_contact_your_chapter_s_sponsors_who_can_send_you_an_fbla_membership_form_after_completing_this_form_you_must_pay_a_fee_of_20_in_order_to_be_officially_considered_a_member_and_to_participate_in_competitive_events"
            android:textAlignment="center"
            android:textColor="@color/darkWhite"
            android:textSize="20sp"
            android:typeface="sans" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/roundedbuttons"
            android:padding="15dp"
            android:text="@string/signQ"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:typeface="sans" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:padding="15dp"
            android:text="@string/signA"
            android:textAlignment="center"
            android:textColor="@color/darkWhite"
            android:textSize="20sp"
            android:typeface="sans" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/roundedbuttons"
            android:padding="15dp"
            android:text="@string/purposeQ"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:typeface="sans" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:padding="15dp"
            android:text="@string/purposeA"
            android:textAlignment="center"
            android:textColor="@color/darkWhite"
            android:textSize="20sp"
            android:typeface="sans" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/roundedbuttons"
            android:padding="15dp"
            android:text="@string/involvedQ"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:typeface="sans" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:text="@string/involvedA"
            android:textAlignment="center"
            android:textColor="@color/darkWhite"
            android:textSize="20sp"
            android:typeface="sans" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <ImageButton
                android:id="@+id/backBtnFaq"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/top_button"
                android:onClick="goBack"
                android:tint="@color/white"
                app:srcCompat="@drawable/left" />
        </RelativeLayout>


    </LinearLayout>




</ScrollView>